# data_bench

./: .gitignore  README.md  dask_tests.py  main.py  pandas_tests.py  parquet_recolumnize.py  parquet_split.py  parquet_to_numpy.py  pool_test.py  pyproject.toml  resutls.py  rnd.ipynb  start_ec2.py  test.py  test_cycles.py  test_ds_numpy_pool.py  test_ds_numpy_ray_pool.py  test_ds_safetensors_ray_pool.py  test_numpy_processes.py  test_processes_dataset_ray_pool.py  test_ray_data.py  test_ray_data_dataset.py  test_ray_numpy.py  test_ray_parquet.py  test_ray_tensors_parquet.py  test_safetensors.py  test_shuffle.py  test_spark.py  test_split.py  utils.py
benchmarks/: test_read.py  test_read_file.py
data_bench/: dask_tests.py  ec2_utils.py  pandas_tests.py  test.py  test_ec2.py  utils.py
